--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  cursor: pointer; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background: #b92b27;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #1565C0, #b92b27);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1565C0, #b92b27);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+
 .done {
   display: none; }
 
 .finish {
   text-decoration: line-through;
   color: grey; }
+
+.container {
+  max-width: 30%;
+  min-height: auto;
+  margin: 5rem auto; }
+  .container .heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: #5656ff;
+    padding: 0.5rem; }
+    .container .heading h1, .container .heading #insert {
+      color: #ffebcd; }
+      .container .heading h1:hover, .container .heading #insert:hover {
+        color: #33dd2d; }
+  .container #todoInput {
+    max-width: 100%;
+    min-height: auto;
+    background-color: #5656ff; }
+    .container #todoInput #mytodo, .container #todoInput #btnTodo {
+      padding: 0.5rem;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 0.5rem; }
+    .container #todoInput input[type="text"] {
+      width: 85%;
+      background-color: whitesmoke; }
+      .container #todoInput input[type="text"]:hover, .container #todoInput input[type="text"] :focus {
+        border: none;
+        border-radius: 0.5rem; }
+    .container #todoInput button {
+      width: 14%;
+      background-color: whitesmoke; }
+      .container #todoInput button:hover {
+        background-color: #33dd2d;
+        color: whitesmoke;
+        border: none;
+        border-radius: 0.5rem; }
+  .container #todos {
+    background-color: whitesmoke;
+    color: black; }
+    .container #todos p {
+      width: 100%;
+      height: 2.5rem;
+      line-height: 1.5rem;
+      font-size: 1.2rem;
+      font-weight: normal;
+      padding-left: 1rem; }
+      .container #todos p:nth-child(2n) {
+        background-color: #e4e4e4; }
