--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,6 @@
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
-    cursor: pointer;
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -79,5 +78,41 @@ body{
                 background-color: #e4e4e4
             }
         }
+    }
+}
+
+// making responsive
+@media (max-width: 1200px){
+    .container{
+        #todoInput{
+            input[type="text"]{
+                width: 84.5%;
+            }
+        }
+    }
+}
+@media (max-width: 1024px){
+    .container{
+        max-width: 40%;
+    }
+}
+@media (max-width: 768px){
+    .container{
+        max-width: 50%;
+    }
+}
+@media (max-width: 600px){
+    .container{
+        max-width: 70%;
+    }
+}
+@media (max-width: 480px){
+    .container{
+        max-width: 80%;
+    }
+}
+@media (max-width: 320px){
+    .container{
+        max-width: 95%;
     }
 }
