--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
-  cursor: pointer; }
+  overflow: hidden; }
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -71,3 +70,27 @@ body {
       padding-left: 1rem; }
       .container #todos p:nth-child(2n) {
         background-color: #e4e4e4; }
+
+@media (max-width: 1200px) {
+  .container #todoInput input[type="text"] {
+    width: 84.5%; } }
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 40%; } }
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 50%; } }
+
+@media (max-width: 600px) {
+  .container {
+    max-width: 70%; } }
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 80%; } }
+
+@media (max-width: 320px) {
+  .container {
+    max-width: 95%; } }
