adding padding bottom on input section

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,8 @@ body {
   .container #todoInput {
     max-width: 100%;
     min-height: auto;
-    background-color: #5656ff; }
+    background-color: #5656ff;
+    padding-bottom: 0.2rem; }
     .container #todoInput #mytodo, .container #todoInput #btnTodo {
       padding: 0.5rem;
       font-size: 1.2rem;
