--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,7 @@ body{
         max-width: 100%;
         min-height: auto;
         background-color: #5656ff;
+        padding-bottom: 0.2rem;
         #mytodo, #btnTodo{
             padding: 0.5rem;
             font-size: 1.2rem;
