--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,14 @@ body {
 .container {
   max-width: 30%;
   min-height: auto;
-  margin: 5rem auto; }
+  margin: 1rem auto; }
+  .container .instruction p {
+    color: #222222;
+    font-size: 1rem;
+    font-weight: normal;
+    margin-bottom: 1rem; }
+    .container .instruction p span {
+      color: #28dc28; }
   .container .heading {
     display: flex;
     flex-direction: row;
