--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,7 @@ body {
     max-width: 95%; }
     .container #todoInput #btnTodo {
       font-size: 1rem; } }
+
+@media (min-width: 600px) and (max-width: 767px) and (orientation: landscape) {
+  .container {
+    max-width: 75%; } }
