--- a/sass/style.scss
+++ b/sass/style.scss
@@ -138,3 +138,8 @@ body{
         }
     }
 }
+@media (min-width: 600px) and (max-width: 767px) and (orientation: landscape){
+    .container{
+        max-width: 75%;
+    }
+}
